--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"); */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
